# django-urlshortener

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  gunicorn.logconfig  pyproject.toml  run.sh  setup-docker-compose.sh
.github/workflows/: codeql-analysis.yml
src/server/: settings.py  urls.py
src/urlshortener/: admin.py  api_views.py  exceptions.py  forms.py  models.py  urls.py  utils.py  views.py
src/urlshortener/management/commands/: importwordlist.py
src/urlshortener/migrations/: 0001_initial.py
src/urlshortener/templates/urlshortener/: index.html
src/urlshortener/tests/: test_api.py  test_mainview.py  test_shorturl.py  test_word_match.py
